--- a/static/signedin.html
+++ b/static/signedin.html
@@ -61,6 +61,13 @@
     </div>
   </script>
 
+  <script id="loading-template" type="text/x-handlebars-template">
+    <div id="overlay" class="box">
+      Loading...
+      <div id="load-error"></div>
+    </div>
+  </script>
+
   <script src="jquery-1.9.0.js"></script>
   <script src="addTappableJQPlugin.js"></script>
   <script src="handlebars.js"></script>
@@ -69,7 +76,8 @@
   var g = {};
 
   window.onload = function() {
-    console.log("Hey");
+    openLoadingPopup();
+
     $.ajax({
       type: "get",
       url: "finalize-fitbit-oauth",
@@ -85,12 +93,14 @@
         } else {
           console.log(response.error);
         }
-
+        
+        if(!checkLogin()){ return; }; // in initializationCode.js
+        makeLogoutTappable(); // in initializationCode.js
         getFitbitData();
       }
     });
 
-    makeLogoutTappable(); // in initializationCode.js
+    
 
     function getFitbitData() {
       $.ajax({
@@ -114,6 +124,7 @@
           }
 
           displayUserData();
+          closeLoadingPopup();
         }
       });
     }
