differentiate between popups and loading
only loads take up whole screen now

--- a/static/signedin.html
+++ b/static/signedin.html
@@ -62,9 +62,11 @@
   </script>
 
   <script id="loading-template" type="text/x-handlebars-template">
-    <div id="overlay" class="box">
+    <div id="loading" class="box">
       Loading...
-      <div id="load-error"></div>
+      <div id="load-error">
+      
+      </div>
     </div>
   </script>
 
