css loading animation

--- a/static/signedin.html
+++ b/static/signedin.html
@@ -8,6 +8,7 @@
 
     <link href="reset.css" rel="stylesheet" type="text/css">
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="loadAnimation.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div id="container">
@@ -65,7 +66,7 @@
     <div id="loading" class="box">
       Loading...
       <div id="load-error">
-      
+
       </div>
     </div>
   </script>
