Improved header font

--- a/static/activity.html
+++ b/static/activity.html
@@ -7,11 +7,12 @@
 
   <link href="reset.css" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div id="container">
     <div id="header" class="box">
-      <a id="home" href="/signedin.html"><img src="fitbit.png" alt="Fitbit" /> Completer</a>
+      <a id="home" href="/signedin.html"><img id="logo" src="fitbit.png" alt="Fitbit" /> Completer</a>
     </div>
 
     <div id="summary" class="content box">
