--- a/static/calories.html
+++ b/static/calories.html
@@ -7,6 +7,7 @@
 
   <link href="reset.css" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet" type="text/css">
+  <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div id="container">
@@ -97,9 +98,6 @@
       <div id="close-overlay">X</div>
     </div>
   </script>
-
-
-
 
   <script>
   var g = {};
