Footer on every page, minor css changes

--- a/static/signedin.html
+++ b/static/signedin.html
@@ -89,7 +89,7 @@
   var g = {};
 
   window.onload = function() {
-  //  openLoadingPopup();
+    openLoadingPopup();
 
     $.ajax({
       type: "get",
