--- a/static/calories.html
+++ b/static/calories.html
@@ -30,10 +30,21 @@
     </div>
 
     <div id="footer">
-      <div class="tab"><a href="signedin.html">Home</a></div>
-      <div class="tab"><a href="steps.html">Steps</a></div>
-      <div id="current-page" class="tab"><a href="calories.html">Calories</a></div>
-      <div class="tab"><a href="activity.html">Activity</a></div>
+      <div class="tab home">
+        <a href="signedin.html"><div class="tabtext">Home</div></a>
+      </div>
+      <div class="tab steps">
+        <a href="steps.html"><div class="tabtext">Steps</div></a>
+      </div>
+      <div id="current-page" class="tab calories">
+        <a href="calories.html"><div class="tabtext">Food</div></a>
+      </div>
+      <div class="tab activity">
+        <a href="activity.html"><div class="tabtext">Activity</div></a>
+      </div>
+      <div class="tab logout" id="logout">
+        <a href=""><div class="tabtext">Logout</div></a>
+      </div>
     </div>
   </div>
 
