--- a/static/calories.html
+++ b/static/calories.html
@@ -7,6 +7,7 @@
 
   <link href="reset.css" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="loadAnimation.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -51,6 +52,28 @@
   <script src="jquery-1.9.0.js"></script>
   <script src="addTappableJQPlugin.js"></script>
   <script src="handlebars.js"></script>
+  <script src="initializationCode.js"></script>
+
+  <script id="loading-template" type="text/x-handlebars-template">
+    <div id="loading" class="box">
+      Loading...
+      <div id="load-error">
+
+      </div>
+    </div>
+  </script>
+
+  <script id="logout-template" type="text/x-handlebars-template">
+    <div id="overlay" class="box">
+      Do you really want to logout?
+      <form action="" id="logout-form">
+        <button type="submit" formaction="javascript:logout()">Yes</button>
+        <button type="submit" formaction="javascript:closeLogoutPopup()">No</button>
+      </form>
+
+      <div id="close-overlay">X</div>
+    </div>
+  </script>
 
   <script id="summary-template" type="text/x-handlebars-template">
     <p>
@@ -160,6 +183,9 @@
   }
 
   window.onload = function() {
+    openLoadingPopup();
+    if(!checkLogin()){return;};
+
     $.ajax({
       type: "get",
       url: "get-fitbit-data",
@@ -178,6 +204,7 @@
         }
         displayCalorieData();
         makeSuggestionsHighlightable();
+        makeLogoutTappable(); // in initializationCode.js
       }
     });
   };
