--- a/static/steps.html
+++ b/static/steps.html
@@ -7,6 +7,7 @@
 
   <link href="reset.css" rel="stylesheet" type="text/css">
   <link href="style.css" rel="stylesheet" type="text/css">
+  <link href="loadAnimation.css" rel="stylesheet" type="text/css">
   <link href='http://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -51,12 +52,22 @@
     </div>
   </div>
 
+  <script id="loading-template" type="text/x-handlebars-template">
+    <div id="loading" class="box">
+      Loading...
+      <div id="load-error">
+
+      </div>
+    </div>
+  </script>
+
   <script src="jquery-1.9.0.js"></script>
   <script src="addTappableJQPlugin.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtjE9cT2HWJpuf745-cYh7rP_E1CPRE-c&sensor=true"></script>
   <script src="gmapVenueDisplay.js"></script>
   <script src="stepFinder.js" type="text/javascript"></script>
   <script src="handlebars.js"></script>
+  <script src="initializationCode.js"></script>
 
   <script id="summary-template" type="text/x-handlebars-template">
     <p>
@@ -65,8 +76,22 @@
     </p>
   </script>
 
+  <script id="logout-template" type="text/x-handlebars-template">
+    <div id="overlay" class="box">
+      Do you really want to logout?
+      <form action="" id="logout-form">
+        <button type="submit" formaction="javascript:logout()">Yes</button>
+        <button type="submit" formaction="javascript:closeLogoutPopup()">No</button>
+      </form>
+
+      <div id="close-overlay">X</div>
+    </div>
+  </script>
+
   <script>
   window.onload = function() {
+    openLoadingPopup();
+    if(!checkLogin()){return;};
     $.ajax({
       type: "get",
       url: "get-fitbit-data",
@@ -95,6 +120,9 @@
          } else {
             $("#summary").html("You've achieved your step goal for the day! If you want to push yourself a little further, we'll suggest some more venues. Just put in the number of steps you want!");
           }
+
+          closeLoadingPopup();
+          makeLogoutTappable(); // in initializationCode.js
         }
         // } else {
         //   console.log("Received an error from the server:");
