--- a/static/calories.html
+++ b/static/calories.html
@@ -204,6 +204,7 @@
         }
         displayCalorieData();
         makeSuggestionsHighlightable();
+        closeLoadingPopup();
         makeLogoutTappable(); // in initializationCode.js
       }
     });
