Improve copy on sign(in).html

--- a/static/signedin.html
+++ b/static/signedin.html
@@ -17,21 +17,23 @@
       </div>
 
       <div class="content box">
-        <p>Welcome to Fitbit Completer, where you can easily find ways to complete your Fitbit goals.</p>
+        <p>
+          <a href="http://www.fitbit.com/home">Fitbit</a> is a web service that uses various physical devices (similar to
+          classic pedometers) and digital interfaces to help you track and improve their health.
+        </p>
 
         <p>
           Fitbit helps challenge you to take a certain number of steps every day and eat and exercise healthily, but it
-          tends to do this in an un-actionable way. Do you really know how many steps away Starbucks is or how many calories
-          14 push-ups burns?
+          tends to do this in an un-actionable way. Does anyone really know how many steps away Starbucks is from them,
+          how many calories a 15 minute jog burns, or how many calories are in a banana?
         </p>
 
         <p>
-          We'll help you by converting abstract goals like "1300 steps" or "eat 400 calories" to real-world
-          ones like "walk to Central Park and back" or "try one serving of spinach". Good luck!
+          We'll help you by converting abstract goals like "take 1300 steps" or "eat 400 calories" to real-world
+          ones like "walk to Central Park and back" or "try one serving of spinach".
         </p>
+        <p>Good luck, and welcome to Fitbit Completer!</p>
       </div>
-
-
 
       <a href="steps.html" class="content box block" id="remainingSteps">
       </a>
