--- a/static/signin.html
+++ b/static/signin.html
@@ -19,7 +19,7 @@
     <div class="content box">
       <p>
         <a href="http://www.fitbit.com/home">Fitbit</a> is a web service that uses various physical devices (similar to
-        classic pedometers) and digital interfaces to help you track and improve their health.
+        classic pedometers) and digital interfaces to help you track and improve your health.
       </p>
 
       <p>
