--- a/static/steps.html
+++ b/static/steps.html
@@ -47,7 +47,7 @@
         <a href="activity.html"><div class="tabtext">Activity</div></a>
       </div>
       <div class="tab logout" id="logout">
-        <a href=""><div class="tabtext">Logout</div></a>
+        <a href="javascript:popupLogout()"><div class="tabtext">Logout</div></a>
       </div>
     </div>
   </div>
