Clean up steps.html

--- a/static/steps.html
+++ b/static/steps.html
@@ -91,7 +91,10 @@
   <script>
   window.onload = function() {
     openLoadingPopup();
-    if(!checkLogin()){return;};
+    if (!checkLogin()) {
+      return;
+    };
+
     $.ajax({
       type: "get",
       url: "get-fitbit-data",
