Make default serving size 1

--- a/static/calories.html
+++ b/static/calories.html
@@ -116,7 +116,7 @@
 
       <form id="log-food" action="javascript:logFood()">
         <p class="form-field-description">Servings</p>
-          <input type="text" id="servings" />
+          <input type="text" id="servings" value="1" />
           <p class="form-field-description">Meal</p>
           <select id="meal" name="meal">
             <option value="Breakfast">Breakfast</option>
