Add placeholder (grayed out) text for searches

--- a/static/steps.html
+++ b/static/steps.html
@@ -21,9 +21,9 @@
 
     <form action="javascript:getGeoAndSubmit()" class="content box">
       <div id="fsvDesc">What do you want to do?</div>
-      <input id="fsvQuery" type="text">
+      <input id="fsvQuery" type="text" placeholder="Dive Bar">
       <div id="stepsDesc">How many steps do you want to complete?</div>
-      <input id="stepsDesired" type="text">
+      <input id="stepsDesired" type="text" placeholder="1000">
       <input type="submit" value="Find Venues">
     </form>
 
