--- a/static/calories.html
+++ b/static/calories.html
@@ -21,9 +21,9 @@
 
     <form action="javascript:searchFoods()" class="content box">
       <div id="foodDesc">What kind of food do you want to eat?</div>
-      <input type="text" id="foodQuery">
+      <input type="text" id="foodQuery" placeholder="Single Malt Scotch">
       <div id="calorieDesc">How many calories do you want to eat per serving?</div>
-      <input type="text" id="caloriesDesired">
+      <input type="text" id="caloriesDesired" placeholder="150">
       <input type="submit" value="Search for foods!">
     </form>
 
