--- a/static/signedin.html
+++ b/static/signedin.html
@@ -42,7 +42,7 @@
           <a href="calories.html" class="content box block" id="remainingCalories">
           </a>
           <a href="activity.html" class="content box block">
-            Touch here to find activities to unlock extra calories.
+            Tap here to find activities to burn more calories.
           </a>
         </div>
      <!--  </div> -->
@@ -159,16 +159,15 @@
 
 console.log('here' + g.goalSteps);
       if (!g.goalSteps || (g.goalSteps - g.actualSteps) < 0) {
-        steps.html("You've completed your steps goal for the day, but if you want to go somewhere, click here!");
+        steps.html("You've completed your steps goal for the day, but tap here for more suggestions on places to walk to.");
       } else {
-        steps.html("You have " + (g.goalSteps - g.actualSteps) + " steps remaining today. Click here to find places to go to complete this goal!");
+        steps.html("You have " + (g.goalSteps - g.actualSteps) + " steps remaining to reach your goal today. Tap here to find places to walk to complete this goal!");
       }
 
       if (!g.caloriesGoal || (g.caloriesGoal - g.actualCalories) < 0) {
-        calories.html("You've eaten all your calories for the day, but I guess if you're still REALLY hungry you can click here.");
-      }
-      else{
-        calories.html("You have " + (g.caloriesGoal - g.actualCalories) + " calories remaining today. Click here to find food to complete thsi goal!");
+        calories.html("You've achieved your calorie goal for the day, but tap here for more suggestions on foods to eat.");
+      } else {
+        calories.html("You are " + (g.caloriesGoal - g.actualCalories) + " calories below your goal for today. Tap here for suggestions on how to complete your goal.");
       }
 
       console.log(g.goalSteps);
@@ -182,7 +181,6 @@ console.log('here' + g.goalSteps);
     g.caloriesGoal = 2000;
     g.actualCalories = 1000;
     displayUserData();
-
   }
 }
   </script>
