Full-width signout overlay

--- a/static/signedin.html
+++ b/static/signedin.html
@@ -73,7 +73,8 @@
 
   <script id="logout-template" type="text/x-handlebars-template">
     <div id="overlay" class="box">
-      Do you really want to log out?
+      <p id="exercise-name">Do you really want to log out from Fitbit Completer?</p>
+
       <form action="" id="logout-form">
         <button type="submit" formaction="javascript:logout()">Yes</button>
         <button type="submit" formaction="javascript:closeLogoutPopup()">No</button>
